--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,212 @@
 /* line 1, ../scss/style.scss */
-#wrapper {
-  margin: auto;
-  max-width: 100%;
-  width: 960px;
+body {
+  color: #666;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  padding: 0 0 30px;
 }
 
-/* line 6, ../scss/style.scss */
+/* line 7, ../scss/style.scss */
+#rm_header {
+  background: black;
+  border-top: solid 0px #e6e6e6;
+  clear: both;
+  color: white;
+  margin: 0 auto;
+  padding: 0;
+  width: 920px;
+}
+
+/* line 16, ../scss/style.scss */
+#rm_header h2 {
+  background: none repeat scroll 0 0 #404040;
+  border-bottom: 1px solid #EC1C24;
+  color: #FFFFFF !important;
+  font-size: 22px !important;
+  height: 30px;
+  line-height: 30px !important;
+  margin: 20px 0 10px;
+  padding: 0 15px;
+}
+
+/* line 26, ../scss/style.scss */
+#content {
+  background: #ffffff;
+  border: solid 0px #e6e6e6;
+  margin: 0 auto;
+  padding: 10px 20px 20px 20px;
+  width: 920px;
+}
+
+/* line 35, ../scss/style.scss */
+#title-left h1 {
+  background: none repeat scroll 0 0 #404040;
+  border-bottom: 1px solid #EC1C24;
+  color: #FFFFFF !important;
+  font-size: 22px !important;
+  height: 30px;
+  line-height: 30px !important;
+  margin: 20px 0 10px;
+  padding: 0 15px;
+}
+
+/* line 45, ../scss/style.scss */
+#title-left h2 {
+  background: none repeat scroll 0 0 #ffffff;
+  border-bottom: 1px solid #EC1C24;
+  color: #006600 !important;
+  font-size: 22px !important;
+  height: 30px;
+  line-height: 30px !important;
+  margin: 20px 0 10px;
+  padding: 0 15px;
+}
+
+/* line 55, ../scss/style.scss */
+#title-line_yc {
+  border-bottom: 0px solid #EBEBEF;
+  display: none;
+  height: 0px;
+  margin-left: -20px;
+  width: 0px;
+}
+
+/* line 62, ../scss/style.scss */
+.left-content {
+  float: left;
+  margin-bottom: 0px;
+  width: 670px;
+}
+
+/* line 67, ../scss/style.scss */
+.add_header {
+  margin-top: 5px;
+  padding-left: 20px;
+}
+
+/* line 71, ../scss/style.scss */
+.button {
+  background-color: #fff;
+  border: 1px solid red;
+  border-radius: 5px;
+  color: #000;
+  font-size: medium;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-top: 10px;
+  moz-border-radius: 5px;
+  padding: 2px 10px;
+  webkit-border-radius: 5px;
+  width: 175px;
+}
+
+/* line 85, ../scss/style.scss */
+.button2 {
+  background-color: yellow;
+  border: 2px solid #006600;
+  border-radius: 5px;
+  color: #000;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-top: 10px;
+  moz-border-radius: 5px;
+  padding: 2px 10px;
+  webkit-border-radius: 5px;
+}
+
+/* line 97, ../scss/style.scss */
+.button3 {
+  background-color: orange;
+  border: 2px solid #006600;
+  border-radius: 5px;
+  color: #000;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-top: 10px;
+  moz-border-radius: 5px;
+  padding: 2px 10px;
+  webkit-border-radius: 5px;
+}
+
+/* line 109, ../scss/style.scss */
+.button:hover {
+  background-color: #ff0000;
+}
+
+/* line 112, ../scss/style.scss */
+#background {
+  left: 0;
+  min-height: 100%;
+  min-width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: -1;
+}
+
+/* line 120, ../scss/style.scss */
+.clear {
+  clear: both;
+  display: block;
+  font-size: 0;
+  line-height: 0;
+  width: 100%;
+}
+
+/* line 127, ../scss/style.scss */
+#back a {
+  color: #006600;
+  text-decoration: underline;
+}
+
+/* line 131, ../scss/style.scss */
+#back {
+  margin-left: 90%;
+}
+
+/* line 134, ../scss/style.scss */
+.img_content {
+  padding: 0 0 0 175px;
+  position: relative;
+}
+
+/* line 138, ../scss/style.scss */
+.img_content img {
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
+/* line 143, ../scss/style.scss */
 #header .left {
   float: left;
   padding: 15px;
 }
 
-/* line 10, ../scss/style.scss */
+/* line 147, ../scss/style.scss */
 #header .right {
   float: right;
   padding: 15px;
   text-align: right;
 }
 
-/* line 15, ../scss/style.scss */
+/* line 152, ../scss/style.scss */
 #header .right label[for="location"] {
   display: block;
 }
 
-/* line 18, ../scss/style.scss */
+/* line 155, ../scss/style.scss */
 #header .right .address .zip,
 #header .right .address .street {
   display: block;
 }
 
-/* line 22, ../scss/style.scss */
+/* line 159, ../scss/style.scss */
 #header .right .section {
   float: left;
   margin: 0 15px 15px 0;
 }
 
-/* line 26, ../scss/style.scss */
+/* line 163, ../scss/style.scss */
 #header .hours-box span:after {
   content: '\A';
   white-space: pre;
